[package]
name = "todo-create"
version = "0.1.0"
authors = ["Daniel Cook <daniel@akkoro.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
direct-executor = "0.3.0"
asml_core = { package = "assemblylift-core-guest", path = "../../../core/guest" }
asml_core_event = { package = "assemblylift-core-event-guest", path = "../../../core/event/guest" }
asml_awslambda = { package = "assemblylift-awslambda-guest", path = "../../../backends/aws-lambda/guest" }
asml_awslambda_iomod = { package = "assemblylift-awslambda-iomod-guest", path = "../../../backends/aws-lambda/iomod/guest" }
